# sendit

./: .gitignore  UI Worflow.md  package-lock.json  supabase-schema.sql
Ideas/: sendit_cross_platform (1).html  sendit_team_doc (2).docx  sendit_teammate_explainer (1).html
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: auth.py  boards.py  instagram.py  media.py  suggestions.py  tester.py  tiktok.py  user_profiles.py  youtube.py
backend/app/prompts/: gemini_event_search_prompt.json  gemini_system_prompt.json
backend/app/schemas/: auth.py  boards.py  instagram.py  media.py  suggestions.py  tiktok.py  youtube.py
backend/app/services/: boards.py  gemini_media_classifier.py  instagram.py  media.py  media_scrape_history.py  social_scrape.py  suggestions.py  supabase_auth.py  tiktok.py  user_profiles.py  video_frames.py  youtube.py
backend/app/static/tester/: app.js  index.html
backend/tester-app/: index.html  package-lock.json  package.json  vite.config.js
backend/tester-app/src/: App.jsx  styles.css
backend/tests/: conftest.py  test_auth_routes.py  test_boards_management.py  test_boards_routes.py  test_boards_service.py  test_dependencies.py  test_instagram_logic.py  test_instagram_scraper_service.py  test_media_service.py  test_social_scrape_helpers.py  test_supabase_auth_service.py  test_taste_profile.py  test_tiktok_logic.py  test_tiktok_scraper_service.py  test_user_profiles.py  test_youtube_logic.py  test_youtube_scraper_service.py
(+133 files in other folders)
