[project]
name = "sendit-backend"
version = "0.1.0"
description = "FastAPI backend with Supabase-powered authentication"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.12,<1.0.0",
  "httpx>=0.28.1,<1.0.0",
  "pydantic-settings>=2.8.1,<3.0.0",
  "email-validator>=2.2.0,<3.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.0,<9.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
